--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 134.195.196.150, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.28MB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-4.36MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.68MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.20MB/s(Youtube:不良林), server: 185.172.113.106, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-674.6KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-6.72MB/s(Youtube:不良林), server: tw01.beibei456.xyz, port: 33351, type: ss, cipher: chacha20-ietf-poly1305, password: 68a401ed-9403-4d69-a564-aeba67204b35}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
