--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 185.172.113.106, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 5.183.176.91, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-6.72MB/s(Youtube:不良林), server: tw01.beibei456.xyz, port: 33351, type: ss, cipher: chacha20-ietf-poly1305, password: 68a401ed-9403-4d69-a564-aeba67204b35}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.01MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
