--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.72MB/s(Youtube:不良林), server: tw01.beibei456.xyz, port: 33351, type: ss, cipher: chacha20-ietf-poly1305, password: 68a401ed-9403-4d69-a564-aeba67204b35}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.01MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-533.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.58MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
