--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.67MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-533.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.58MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-7.41MB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-441.7KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
   - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-533.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
 rules:
